framec/tests/snapshots/swift_snapshots__keyword_ident.snap
---
source: framec/tests/swift_snapshots.rs
expression: "compile_fixture(\"15_keyword_ident\", \"swift\")"
---
import Foundation

class KeywordIdentFrameEvent {
    var _message: String
    var _parameters: [Any]

    init(message: String, parameters: [Any] = []) {
        self._message = message
        self._parameters = parameters
    }
}

class KeywordIdentFrameContext {
    var _event: KeywordIdentFrameEvent
    var _return: Any?
    var _data: [String: Any] = [:]
    var _transitioned: Bool = false

    init(event: KeywordIdentFrameEvent, defaultReturn: Any? = nil) {
        self._event = event
        self._return = defaultReturn
    }
}

class KeywordIdentCompartment {
    var state: String
    var state_args: [Any] = []
    var state_vars: [String: Any] = [:]
    var enter_args: [Any] = []
    var exit_args: [Any] = []
    var forward_event: KeywordIdentFrameEvent?
    var parent_compartment: KeywordIdentCompartment?

    init(state: String) {
        self.state = state
    }

    func copy() -> KeywordIdentCompartment {
        let c = KeywordIdentCompartment(state: self.state)
        c.state_args = self.state_args
        c.state_vars = self.state_vars
        c.enter_args = self.enter_args
        c.exit_args = self.exit_args
        c.forward_event = self.forward_event
        c.parent_compartment = self.parent_compartment
        return c
    }
}

public class KeywordIdent {
    private var _state_stack: [KeywordIdentCompartment] = []
    private var __compartment: KeywordIdentCompartment
    private var __next_compartment: KeywordIdentCompartment? = nil
    private var _context_stack: [KeywordIdentFrameContext] = []
    public var `guard`: Int = 0

    init() {
        _state_stack = []
        _context_stack = []
        self.__compartment = KeywordIdent.__prepareEnter("S", [], [])
        self.__next_compartment = nil
    }

    func __frame_init() {
        let __e = KeywordIdentFrameEvent(message: "$>", parameters: __compartment.enter_args)
        let __ctx = KeywordIdentFrameContext(event: __e)
        _context_stack.append(__ctx)
        __kernel(__e)
        _context_stack.removeLast()
    }

    static func __create() -> KeywordIdent {
        let c = KeywordIdent()
        c.__frame_init()
        return c
    }

    private static func hsm_chain() -> [String: [String]] {
        return [
            "S": ["S"],
        ]
    }
    private static func __prepareEnter(_ leaf: String, _ state_args: [Any], _ enter_args: [Any]) -> KeywordIdentCompartment {
        var comp: KeywordIdentCompartment? = nil
        for name in KeywordIdent.hsm_chain()[leaf]! {
            let new_comp = KeywordIdentCompartment(state: name)
            new_comp.state_args = state_args
            new_comp.enter_args = enter_args
            new_comp.parent_compartment = comp
            comp = new_comp
        }
        return comp!
    }
    private func __prepareExit(_ exit_args: [Any]) {
        var comp: KeywordIdentCompartment? = __compartment
        while comp != nil {
            comp!.exit_args = exit_args
            comp = comp!.parent_compartment
        }
    }

    private func __kernel(_ __e: KeywordIdentFrameEvent) {
        // Route event to current state.
        __router(__e)
        // Drain any transitions queued by the handler.
        while __next_compartment != nil {
            let next_compartment: KeywordIdentCompartment = __next_compartment!
            __next_compartment = nil
            // Exit the current (leaf) state.
            let exit_event = KeywordIdentFrameEvent(message: "<$", parameters: __compartment.exit_args)
            __router(exit_event)
            // Switch to the new compartment.
            __compartment = next_compartment
            // Three-branch forward-event handling.
            let forward_event: KeywordIdentFrameEvent? = next_compartment.forward_event
            next_compartment.forward_event = nil
            if forward_event == nil {
                // No forwarded event — synthesize a fresh $>.
                let enter_event = KeywordIdentFrameEvent(message: "$>", parameters: __compartment.enter_args)
                __router(enter_event)
            } else if forward_event!._message == "$>" {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event!)
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                let enter_event = KeywordIdentFrameEvent(message: "$>", parameters: __compartment.enter_args)
                __router(enter_event)
                __router(forward_event!)
            }
            for ctx in _context_stack {
                ctx._transitioned = true
            }
        }
    }

    private func __router(_ __e: KeywordIdentFrameEvent) {
        if __compartment.state == "S" {
            _state_S(__e, __compartment)
        }
    }

    private func __transition(_ next: KeywordIdentCompartment) {
        __next_compartment = next
    }

    public func `init`(_ `default`: Int) {
        let __e = KeywordIdentFrameEvent(message: "init", parameters: [`default`])
        let __ctx = KeywordIdentFrameContext(event: __e)
        _context_stack.append(__ctx)
        defer { _context_stack.removeLast() }
        __kernel(_context_stack[_context_stack.count - 1]._event)
    }

    public func run() {
        let __e = KeywordIdentFrameEvent(message: "run", parameters: [])
        let __ctx = KeywordIdentFrameContext(event: __e)
        _context_stack.append(__ctx)
        defer { _context_stack.removeLast() }
        __kernel(_context_stack[_context_stack.count - 1]._event)
    }

    private func _state_S(_ __e: KeywordIdentFrameEvent, _ compartment: KeywordIdentCompartment) {
        if __e._message == "init" {
            self._s_S_hdl_user_init(__e, compartment)
            return
        }
        if __e._message == "run" {
            self._s_S_hdl_user_run(__e, compartment)
            return
        }
    }

    private func _s_S_hdl_user_init(_ __e: KeywordIdentFrameEvent, _ compartment: KeywordIdentCompartment) {
        let `default` = __e._parameters[0] as! Int
        self.`guard` = `default`
    }

    private func _s_S_hdl_user_run(_ __e: KeywordIdentFrameEvent, _ compartment: KeywordIdentCompartment) {
        self.`init`(7)
        if !_context_stack.isEmpty && _context_stack[_context_stack.count - 1]._transitioned { return }
    }
}
