framec/tests/snapshots/swift_snapshots__lifecycle_args.snap
---
source: framec/tests/swift_snapshots.rs
expression: "compile_fixture(\"13_lifecycle_args\", \"swift\")"
---
import Foundation

class LifecycleArgsFrameEvent {
    var _message: String
    var _parameters: [Any]

    init(message: String, parameters: [Any] = []) {
        self._message = message
        self._parameters = parameters
    }
}

class LifecycleArgsFrameContext {
    var _event: LifecycleArgsFrameEvent
    var _return: Any?
    var _data: [String: Any] = [:]
    var _transitioned: Bool = false

    init(event: LifecycleArgsFrameEvent, defaultReturn: Any? = nil) {
        self._event = event
        self._return = defaultReturn
    }
}

class LifecycleArgsCompartment {
    var state: String
    var state_args: [Any] = []
    var state_vars: [String: Any] = [:]
    var enter_args: [Any] = []
    var exit_args: [Any] = []
    var forward_event: LifecycleArgsFrameEvent?
    var parent_compartment: LifecycleArgsCompartment?

    init(state: String) {
        self.state = state
    }

    func copy() -> LifecycleArgsCompartment {
        let c = LifecycleArgsCompartment(state: self.state)
        c.state_args = self.state_args
        c.state_vars = self.state_vars
        c.enter_args = self.enter_args
        c.exit_args = self.exit_args
        c.forward_event = self.forward_event
        c.parent_compartment = self.parent_compartment
        return c
    }
}

public class LifecycleArgs {
    private var _state_stack: [LifecycleArgsCompartment] = []
    private var __compartment: LifecycleArgsCompartment
    private var __next_compartment: LifecycleArgsCompartment? = nil
    private var _context_stack: [LifecycleArgsFrameContext] = []
    public var sum: Int = 0
    public var label: String = ""

    init() {
        _state_stack = []
        _context_stack = []
        self.__compartment = LifecycleArgs.__prepareEnter("Idle", [], [])
        self.__next_compartment = nil
    }

    func __frame_init() {
        let __e = LifecycleArgsFrameEvent(message: "$>", parameters: __compartment.enter_args)
        let __ctx = LifecycleArgsFrameContext(event: __e)
        _context_stack.append(__ctx)
        __kernel(__e)
        _context_stack.removeLast()
    }

    static func __create() -> LifecycleArgs {
        let c = LifecycleArgs()
        c.__frame_init()
        return c
    }

    private static func hsm_chain() -> [String: [String]] {
        return [
            "Idle": ["Idle"],
            "Active": ["Active"],
        ]
    }
    private static func __prepareEnter(_ leaf: String, _ state_args: [Any], _ enter_args: [Any]) -> LifecycleArgsCompartment {
        var comp: LifecycleArgsCompartment? = nil
        for name in LifecycleArgs.hsm_chain()[leaf]! {
            let new_comp = LifecycleArgsCompartment(state: name)
            new_comp.state_args = state_args
            new_comp.enter_args = enter_args
            new_comp.parent_compartment = comp
            comp = new_comp
        }
        return comp!
    }
    private func __prepareExit(_ exit_args: [Any]) {
        var comp: LifecycleArgsCompartment? = __compartment
        while comp != nil {
            comp!.exit_args = exit_args
            comp = comp!.parent_compartment
        }
    }

    private func __kernel(_ __e: LifecycleArgsFrameEvent) {
        // Route event to current state.
        __router(__e)
        // Drain any transitions queued by the handler.
        while __next_compartment != nil {
            let next_compartment: LifecycleArgsCompartment = __next_compartment!
            __next_compartment = nil
            // Exit the current (leaf) state.
            let exit_event = LifecycleArgsFrameEvent(message: "<$", parameters: __compartment.exit_args)
            __router(exit_event)
            // Switch to the new compartment.
            __compartment = next_compartment
            // Three-branch forward-event handling.
            let forward_event: LifecycleArgsFrameEvent? = next_compartment.forward_event
            next_compartment.forward_event = nil
            if forward_event == nil {
                // No forwarded event — synthesize a fresh $>.
                let enter_event = LifecycleArgsFrameEvent(message: "$>", parameters: __compartment.enter_args)
                __router(enter_event)
            } else if forward_event!._message == "$>" {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event!)
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                let enter_event = LifecycleArgsFrameEvent(message: "$>", parameters: __compartment.enter_args)
                __router(enter_event)
                __router(forward_event!)
            }
            for ctx in _context_stack {
                ctx._transitioned = true
            }
        }
    }

    private func __router(_ __e: LifecycleArgsFrameEvent) {
        if __compartment.state == "Idle" {
            _state_Idle(__e, __compartment)
        } else if __compartment.state == "Active" {
            _state_Active(__e, __compartment)
        }
    }

    private func __transition(_ next: LifecycleArgsCompartment) {
        __next_compartment = next
    }

    public func load(_ n: Int, _ label: String) {
        let __e = LifecycleArgsFrameEvent(message: "load", parameters: [n, label])
        let __ctx = LifecycleArgsFrameContext(event: __e)
        _context_stack.append(__ctx)
        defer { _context_stack.removeLast() }
        __kernel(_context_stack[_context_stack.count - 1]._event)
    }

    public func total() -> Int {
        let __e = LifecycleArgsFrameEvent(message: "total", parameters: [])
        let __ctx = LifecycleArgsFrameContext(event: __e, defaultReturn: 0)
        _context_stack.append(__ctx)
        defer { _context_stack.removeLast() }
        __kernel(_context_stack[_context_stack.count - 1]._event)
        let __result = _context_stack[_context_stack.count - 1]._return as! Int
        return __result
    }

    public func tag() -> String {
        let __e = LifecycleArgsFrameEvent(message: "tag", parameters: [])
        let __ctx = LifecycleArgsFrameContext(event: __e, defaultReturn: "")
        _context_stack.append(__ctx)
        defer { _context_stack.removeLast() }
        __kernel(_context_stack[_context_stack.count - 1]._event)
        let __result = _context_stack[_context_stack.count - 1]._return as! String
        return __result
    }

    private func _state_Idle(_ __e: LifecycleArgsFrameEvent, _ compartment: LifecycleArgsCompartment) {
        if __e._message == "load" {
            self._s_Idle_hdl_user_load(__e, compartment)
            return
        }
    }

    private func _state_Active(_ __e: LifecycleArgsFrameEvent, _ compartment: LifecycleArgsCompartment) {
        if __e._message == "$>" {
            self._s_Active_hdl_frame_enter(__e, compartment)
            return
        }
        if __e._message == "tag" {
            self._s_Active_hdl_user_tag(__e, compartment)
            return
        }
        if __e._message == "total" {
            self._s_Active_hdl_user_total(__e, compartment)
            return
        }
    }

    private func _s_Idle_hdl_user_load(_ __e: LifecycleArgsFrameEvent, _ compartment: LifecycleArgsCompartment) {
        let n = __e._parameters[0] as! Int
        let label = __e._parameters[1] as! String
        let __compartment = LifecycleArgs.__prepareEnter("Active", [], [n, label])
        __transition(__compartment)
        return
    }

    private func _s_Active_hdl_frame_enter(_ __e: LifecycleArgsFrameEvent, _ compartment: LifecycleArgsCompartment) {
        let count = compartment.enter_args[0] as! Int
        let name = compartment.enter_args[1] as! String
        self.sum = count + 1
        self.label = name
    }

    private func _s_Active_hdl_user_tag(_ __e: LifecycleArgsFrameEvent, _ compartment: LifecycleArgsCompartment) {
        _context_stack[_context_stack.count - 1]._return = self.label
                        return
    }

    private func _s_Active_hdl_user_total(_ __e: LifecycleArgsFrameEvent, _ compartment: LifecycleArgsCompartment) {
        _context_stack[_context_stack.count - 1]._return = self.sum
                        return
    }
}
