framec/tests/snapshots/swift_snapshots__linear_fsm.snap
---
source: framec/tests/swift_snapshots.rs
expression: "compile_fixture(\"01_linear_fsm\", \"swift\")"
---
import Foundation

class LinearFsmFrameEvent {
    var _message: String
    var _parameters: [Any]

    init(message: String, parameters: [Any] = []) {
        self._message = message
        self._parameters = parameters
    }
}

class LinearFsmFrameContext {
    var _event: LinearFsmFrameEvent
    var _return: Any?
    var _data: [String: Any] = [:]
    var _transitioned: Bool = false

    init(event: LinearFsmFrameEvent, defaultReturn: Any? = nil) {
        self._event = event
        self._return = defaultReturn
    }
}

class LinearFsmCompartment {
    var state: String
    var state_args: [Any] = []
    var state_vars: [String: Any] = [:]
    var enter_args: [Any] = []
    var exit_args: [Any] = []
    var forward_event: LinearFsmFrameEvent?
    var parent_compartment: LinearFsmCompartment?

    init(state: String) {
        self.state = state
    }

    func copy() -> LinearFsmCompartment {
        let c = LinearFsmCompartment(state: self.state)
        c.state_args = self.state_args
        c.state_vars = self.state_vars
        c.enter_args = self.enter_args
        c.exit_args = self.exit_args
        c.forward_event = self.forward_event
        c.parent_compartment = self.parent_compartment
        return c
    }
}

public class LinearFsm {
    private var _state_stack: [LinearFsmCompartment] = []
    private var __compartment: LinearFsmCompartment
    private var __next_compartment: LinearFsmCompartment? = nil
    private var _context_stack: [LinearFsmFrameContext] = []
    public var total: Int = 0

    init() {
        _state_stack = []
        _context_stack = []
        self.__compartment = LinearFsm.__prepareEnter("Idle", [], [])
        self.__next_compartment = nil
    }

    func __frame_init() {
        let __e = LinearFsmFrameEvent(message: "$>", parameters: __compartment.enter_args)
        let __ctx = LinearFsmFrameContext(event: __e)
        _context_stack.append(__ctx)
        __kernel(__e)
        _context_stack.removeLast()
    }

    static func __create() -> LinearFsm {
        let c = LinearFsm()
        c.__frame_init()
        return c
    }

    private static func hsm_chain() -> [String: [String]] {
        return [
            "Idle": ["Idle"],
            "Active": ["Active"],
            "Done": ["Done"],
        ]
    }
    private static func __prepareEnter(_ leaf: String, _ state_args: [Any], _ enter_args: [Any]) -> LinearFsmCompartment {
        var comp: LinearFsmCompartment? = nil
        for name in LinearFsm.hsm_chain()[leaf]! {
            let new_comp = LinearFsmCompartment(state: name)
            new_comp.state_args = state_args
            new_comp.enter_args = enter_args
            new_comp.parent_compartment = comp
            comp = new_comp
        }
        return comp!
    }
    private func __prepareExit(_ exit_args: [Any]) {
        var comp: LinearFsmCompartment? = __compartment
        while comp != nil {
            comp!.exit_args = exit_args
            comp = comp!.parent_compartment
        }
    }

    private func __kernel(_ __e: LinearFsmFrameEvent) {
        // Route event to current state.
        __router(__e)
        // Drain any transitions queued by the handler.
        while __next_compartment != nil {
            let next_compartment: LinearFsmCompartment = __next_compartment!
            __next_compartment = nil
            // Exit the current (leaf) state.
            let exit_event = LinearFsmFrameEvent(message: "<$", parameters: __compartment.exit_args)
            __router(exit_event)
            // Switch to the new compartment.
            __compartment = next_compartment
            // Three-branch forward-event handling.
            let forward_event: LinearFsmFrameEvent? = next_compartment.forward_event
            next_compartment.forward_event = nil
            if forward_event == nil {
                // No forwarded event — synthesize a fresh $>.
                let enter_event = LinearFsmFrameEvent(message: "$>", parameters: __compartment.enter_args)
                __router(enter_event)
            } else if forward_event!._message == "$>" {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event!)
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                let enter_event = LinearFsmFrameEvent(message: "$>", parameters: __compartment.enter_args)
                __router(enter_event)
                __router(forward_event!)
            }
            for ctx in _context_stack {
                ctx._transitioned = true
            }
        }
    }

    private func __router(_ __e: LinearFsmFrameEvent) {
        if __compartment.state == "Idle" {
            _state_Idle(__e, __compartment)
        } else if __compartment.state == "Active" {
            _state_Active(__e, __compartment)
        } else if __compartment.state == "Done" {
            _state_Done(__e, __compartment)
        }
    }

    private func __transition(_ next: LinearFsmCompartment) {
        __next_compartment = next
    }

    public func start() {
        let __e = LinearFsmFrameEvent(message: "start", parameters: [])
        let __ctx = LinearFsmFrameContext(event: __e)
        _context_stack.append(__ctx)
        __kernel(_context_stack[_context_stack.count - 1]._event)
        _context_stack.removeLast()
    }

    public func progress(_ amount: Int) {
        let __e = LinearFsmFrameEvent(message: "progress", parameters: [amount])
        let __ctx = LinearFsmFrameContext(event: __e)
        _context_stack.append(__ctx)
        __kernel(_context_stack[_context_stack.count - 1]._event)
        _context_stack.removeLast()
    }

    public func finish() {
        let __e = LinearFsmFrameEvent(message: "finish", parameters: [])
        let __ctx = LinearFsmFrameContext(event: __e)
        _context_stack.append(__ctx)
        __kernel(_context_stack[_context_stack.count - 1]._event)
        _context_stack.removeLast()
    }

    private func _state_Idle(_ __e: LinearFsmFrameEvent, _ compartment: LinearFsmCompartment) {
        if __e._message == "start" {
            self._s_Idle_hdl_user_start(__e, compartment)
            return
        }
    }

    private func _state_Active(_ __e: LinearFsmFrameEvent, _ compartment: LinearFsmCompartment) {
        if __e._message == "finish" {
            self._s_Active_hdl_user_finish(__e, compartment)
            return
        }
        if __e._message == "progress" {
            self._s_Active_hdl_user_progress(__e, compartment)
            return
        }
    }

    private func _state_Done(_ __e: LinearFsmFrameEvent, _ compartment: LinearFsmCompartment) {

    }

    private func _s_Idle_hdl_user_start(_ __e: LinearFsmFrameEvent, _ compartment: LinearFsmCompartment) {
        let __compartment = LinearFsm.__prepareEnter("Active", [], [])
        __transition(__compartment)
        return
    }

    private func _s_Active_hdl_user_finish(_ __e: LinearFsmFrameEvent, _ compartment: LinearFsmCompartment) {
        let __compartment = LinearFsm.__prepareEnter("Done", [], [])
        __transition(__compartment)
        return
    }

    private func _s_Active_hdl_user_progress(_ __e: LinearFsmFrameEvent, _ compartment: LinearFsmCompartment) {
        let amount = __e._parameters[0] as! Int
        self.total = self.total + amount
    }
}
